--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,12 @@
 #content {
+  background-color: white;
+  border: 10px solid red;
+  padding: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 650px;
 }
 
-#greeting-container {
-  margin-top: 20px;
+#fact-container {
+  margin-top: 15px;
 }
