--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,12 +1,26 @@
 #content {
-  background-color: white;
-  border: 10px solid red;
-  padding: 100px;
+  text-align: center;
+  padding: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: floralwhite;
   margin-left: auto;
   margin-right: auto;
   width: 650px;
+  background:transparent
 }
 
-#fact-container {
+#bold {
+    color: black;
+    text-shadow: 2px 2px 5px turquoise, 1px 1px 3px purple, 1px 2px 3px snow;
+}
+
+#button {
+  border-radius:10px;
+  color: floralwhite;
+  background-color: black;
+  
+}
+
+#quote-container {
   margin-top: 15px;
 }
