Finished Week 3 Project --> comments can be deleted & number of comments on screen can be chosen

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -45,6 +45,12 @@ body {
     background-color: black;
 }
 
+#delete-button {
+    border-radius:10px;
+    color: floralwhite;
+    background-color: black; 
+}
+
 h1, h2, h3 {
     color: black;
     text-shadow: 2px 2px 5px turquoise, 1px 1px 3px purple, 1px 2px 3px snow;
