--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -48,16 +48,16 @@ body {
     word-wrap: break-word;
 }
 
-h1, h2, h3 {
-    color: black;
-    text-shadow: 2px 2px 5px turquoise, 1px 1px 3px purple, 1px 2px 3px snow;
-}
-
 .gallery-img {
     width: 400px; 
     height: 221px;
     margin-left: auto;
     margin-right: auto;
+}
+
+h1, h2, h3 {
+    color: black;
+    text-shadow: 2px 2px 5px turquoise, 1px 1px 3px purple, 1px 2px 3px snow;
 }
 
 .home-img {
@@ -79,6 +79,15 @@ img:hover {
 li {
     list-style-type:none;
     margin-top: 15px;
+}
+
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 650px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
 }
 
 #name-box, #text-box {
