--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,6 +1,6 @@
 a {
-    color: black;
-    text-shadow: 2px 2px 5px turquoise, 1px 1px 3px purple, 1px 2px 3px snow;
+    color: #000000;
+    text-shadow: 2px 2px 5px #40e0d0, 1px 1px 3px #800080, 1px 2px 3px #fffafa;
     text-decoration: underline;
 }
 
@@ -22,20 +22,23 @@ body {
     text-align: center;
     padding: 25px;
     font-family: Arial, Helvetica, sans-serif;
-    color: floralwhite;
+    color: #fffaf0;
     margin-left: auto;
     margin-right: auto;
     width: 650px;
 }
 
+.buttons, select {
+    color: #fffaf0;
+    background-color: #000000;
+}
+
 .buttons {
-    border-radius:10px;
-    color: floralwhite;
-    background-color: black;
+    border-radius:7.5px;
 }
 
 .comment-bar {
-    border-bottom:1.5px solid floralwhite;
+    border-bottom:1.5px solid #fffaf0;
     opacity: 0.6;
 }
 
@@ -48,6 +51,10 @@ body {
     word-wrap: break-word;
 }
 
+form {
+    display: inline-block;
+}
+
 .gallery-img {
     width: 400px; 
     height: 221px;
@@ -56,8 +63,8 @@ body {
 }
 
 h1, h2, h3 {
-    color: black;
-    text-shadow: 2px 2px 5px turquoise, 1px 1px 3px purple, 1px 2px 3px snow;
+    color: #000000;
+    text-shadow: 2px 2px 5px #40e0d0, 1px 1px 3px #800080, 1px 2px 3px #fffafa;
 }
 
 .home-img {
@@ -73,7 +80,7 @@ html {
 }
 
 img:hover {
-    box-shadow: 0 0 2px 1px white;
+    box-shadow: 0 0 2px 1px #ffffff;
 }
 
 li {
@@ -82,27 +89,32 @@ li {
 }
 
 #map {
-  border: thin solid black;
+  border: thin solid #000000;
   height: 350px;
   width: 425px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
-  color: black;
+  color: #000000;
 }
 
 #name-box, #text-box {
     background: url(images/better.jpg) center center no-repeat fixed;
-    border: 1px solid white;
+    border: 1px solid #ffffff;
     outline: none;
     resize: none;
-    color: floralwhite;
+    color: #fffaf0;
     border-radius: 6.5px;
 }
 
 #name-box {
     width: 12em;
     height: 1.75em;
+}
+
+select {
+    border: #fffaf0;
+    border-radius: 1.25px;
 }
 
 #text-box {
@@ -112,7 +124,7 @@ li {
 
 /* PlaceHolder */
 ::-webkit-input-placeholder {
-  color: floralwhite;
+  color: #fffaf0;
 }
 
 :focus::-webkit-input-placeholder {
